--- a/forms/main/mainwindow.ui
+++ b/forms/main/mainwindow.ui
@@ -41,18 +41,168 @@
     <addaction name="separator"/>
     <addaction name="aboutAction"/>
    </widget>
+   <widget class="QMenu" name="menuEdit">
+    <property name="title">
+     <string>Edit</string>
+    </property>
+    <addaction name="actionUndo"/>
+    <addaction name="actionRedo"/>
+    <addaction name="separator"/>
+    <addaction name="actionCut"/>
+    <addaction name="actionCopy"/>
+    <addaction name="actionPaste"/>
+    <addaction name="actionSelectAll"/>
+    <addaction name="separator"/>
+    <addaction name="actionFind"/>
+    <addaction name="actionFindReplace"/>
+   </widget>
+   <widget class="QMenu" name="menuDictionary">
+    <property name="title">
+     <string>Dictionary</string>
+    </property>
+    <widget class="QMenu" name="menuClassifiers">
+     <property name="title">
+      <string>Classifiers</string>
+     </property>
+     <addaction name="actionManufacturers"/>
+     <addaction name="actionClassifierOfUnitsOfMeasurement"/>
+    </widget>
+    <addaction name="actionNomenclature"/>
+    <addaction name="actionCounterparties"/>
+    <addaction name="menuClassifiers"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuEdit"/>
+   <addaction name="menuDictionary"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="quitAction">
+   <property name="icon">
+    <iconset theme="application-exit">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
    <property name="text">
     <string>Quit</string>
    </property>
   </action>
   <action name="aboutAction">
+   <property name="icon">
+    <iconset theme="help"/>
+   </property>
    <property name="text">
     <string>About</string>
+   </property>
+  </action>
+  <action name="actionCut">
+   <property name="icon">
+    <iconset theme="edit-cut"/>
+   </property>
+   <property name="text">
+    <string>Cut</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+X</string>
+   </property>
+  </action>
+  <action name="actionCopy">
+   <property name="icon">
+    <iconset theme="edit-copy"/>
+   </property>
+   <property name="text">
+    <string>Copy</string>
+   </property>
+  </action>
+  <action name="actionPaste">
+   <property name="icon">
+    <iconset theme="edit-paste"/>
+   </property>
+   <property name="text">
+    <string>Paste</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+V</string>
+   </property>
+  </action>
+  <action name="actionUndo">
+   <property name="icon">
+    <iconset theme="edit-undo"/>
+   </property>
+   <property name="text">
+    <string>Undo</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Z</string>
+   </property>
+  </action>
+  <action name="actionRedo">
+   <property name="icon">
+    <iconset theme="edit-redo"/>
+   </property>
+   <property name="text">
+    <string>Redo</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Y</string>
+   </property>
+  </action>
+  <action name="actionSelectAll">
+   <property name="icon">
+    <iconset theme="edit-select-all"/>
+   </property>
+   <property name="text">
+    <string>Select All</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+A</string>
+   </property>
+  </action>
+  <action name="actionFind">
+   <property name="icon">
+    <iconset theme="edit-find"/>
+   </property>
+   <property name="text">
+    <string>Find ...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+F</string>
+   </property>
+  </action>
+  <action name="actionFindReplace">
+   <property name="icon">
+    <iconset theme="edit-find-replace"/>
+   </property>
+   <property name="text">
+    <string>Find &amp;&amp; Replace ...</string>
+   </property>
+   <property name="iconText">
+    <string>Find &amp;&amp; Replace ...</string>
+   </property>
+   <property name="toolTip">
+    <string>Find &amp;&amp; Replace ...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+H</string>
+   </property>
+  </action>
+  <action name="actionNomenclature">
+   <property name="text">
+    <string>Nomenclature</string>
+   </property>
+  </action>
+  <action name="actionManufacturers">
+   <property name="text">
+    <string>Manufacturers</string>
+   </property>
+  </action>
+  <action name="actionClassifierOfUnitsOfMeasurement">
+   <property name="text">
+    <string>Units of measurement</string>
+   </property>
+  </action>
+  <action name="actionCounterparties">
+   <property name="text">
+    <string>Counterparties</string>
    </property>
   </action>
  </widget>
