--- a/forms/main/mainwindow.ui
+++ b/forms/main/mainwindow.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>755</width>
-    <height>370</height>
+    <height>402</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Mini Shop</string>
@@ -31,6 +37,8 @@
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="actionPrint"/>
+    <addaction name="actionPrint_preview"/>
     <addaction name="separator"/>
     <addaction name="quitAction"/>
    </widget>
@@ -77,6 +85,17 @@
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>
   <action name="quitAction">
    <property name="icon">
     <iconset theme="application-exit">
@@ -85,92 +104,155 @@
    <property name="text">
     <string>Quit</string>
    </property>
+   <property name="statusTip">
+    <string>Exit the application</string>
+   </property>
   </action>
   <action name="aboutAction">
    <property name="icon">
-    <iconset theme="help"/>
+    <iconset theme="help">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>About</string>
    </property>
+   <property name="statusTip">
+    <string>Show the application's About box</string>
+   </property>
   </action>
   <action name="actionCut">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
-    <iconset theme="edit-cut"/>
+    <iconset theme="edit-cut">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Cut</string>
+   </property>
+   <property name="statusTip">
+    <string>Cut the current selection's contents to the clipboard</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+X</string>
    </property>
   </action>
   <action name="actionCopy">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
-    <iconset theme="edit-copy"/>
+    <iconset theme="edit-copy">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Copy</string>
    </property>
+   <property name="statusTip">
+    <string>Copy the current selection's contents to the clipboard</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+C</string>
+   </property>
   </action>
   <action name="actionPaste">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
-    <iconset theme="edit-paste"/>
+    <iconset theme="edit-paste">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Paste</string>
+   </property>
+   <property name="statusTip">
+    <string>Paste the clipboard's contents into the current selection</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+V</string>
    </property>
   </action>
   <action name="actionUndo">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
-    <iconset theme="edit-undo"/>
+    <iconset theme="edit-undo">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Undo</string>
+   </property>
+   <property name="statusTip">
+    <string>Undo the last operation</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Z</string>
    </property>
   </action>
   <action name="actionRedo">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
-    <iconset theme="edit-redo"/>
+    <iconset theme="edit-redo">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Redo</string>
+   </property>
+   <property name="statusTip">
+    <string>Redo the last operation</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Y</string>
    </property>
   </action>
   <action name="actionSelectAll">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
-    <iconset theme="edit-select-all"/>
+    <iconset theme="edit-select-all">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Select All</string>
+   </property>
+   <property name="statusTip">
+    <string>Select all text</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+A</string>
    </property>
   </action>
   <action name="actionFind">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
-    <iconset theme="edit-find"/>
+    <iconset theme="edit-find">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Find ...</string>
+   </property>
+   <property name="statusTip">
+    <string>Find text</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+F</string>
    </property>
   </action>
   <action name="actionFindReplace">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
-    <iconset theme="edit-find-replace"/>
+    <iconset theme="edit-find-replace">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Find &amp;&amp; Replace ...</string>
@@ -181,6 +263,9 @@
    <property name="toolTip">
     <string>Find &amp;&amp; Replace ...</string>
    </property>
+   <property name="statusTip">
+    <string>Finf &amp;&amp; replace text</string>
+   </property>
    <property name="shortcut">
     <string>Ctrl+H</string>
    </property>
@@ -189,20 +274,68 @@
    <property name="text">
     <string>Nomenclature</string>
    </property>
+   <property name="statusTip">
+    <string>Open dictionary Nomenclature</string>
+   </property>
   </action>
   <action name="actionManufacturers">
    <property name="text">
     <string>Manufacturers</string>
+   </property>
+   <property name="statusTip">
+    <string>Open dictionary Manufacturers</string>
    </property>
   </action>
   <action name="actionClassifierOfUnitsOfMeasurement">
    <property name="text">
     <string>Units of measurement</string>
    </property>
+   <property name="statusTip">
+    <string>Open dictionary Units of measurement</string>
+   </property>
   </action>
   <action name="actionCounterparties">
    <property name="text">
     <string>Counterparties</string>
+   </property>
+   <property name="statusTip">
+    <string>Open dictionary Counterparties</string>
+   </property>
+  </action>
+  <action name="actionPrint">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset theme="document-print">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
+   <property name="text">
+    <string>Print...</string>
+   </property>
+   <property name="statusTip">
+    <string>Print the document</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+P</string>
+   </property>
+  </action>
+  <action name="actionPrint_preview">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset theme="document-print-preview">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
+   <property name="text">
+    <string>Print Preview</string>
+   </property>
+   <property name="statusTip">
+    <string>Print preview the document</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+P</string>
    </property>
   </action>
  </widget>
