--- a/forms/main/mainwindow.ui
+++ b/forms/main/mainwindow.ui
@@ -24,16 +24,11 @@
     <normaloff>:/images/minishop.ico</normaloff>:/images/minishop.ico</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QMdiArea" name="mdiArea">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>30</y>
-      <width>200</width>
-      <height>160</height>
-     </rect>
-    </property>
-   </widget>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QMdiArea" name="mdiArea"/>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
